--- a/index.html
+++ b/index.html
@@ -5000,19 +5000,13 @@
                             </div>
                             <div class="ue_timeline_item_text">
                               <p>
-                                Major Exchange Listings: Target and achieve
-                                listings for KBY on major cryptocurrency
-                                exchanges.
+                                Big-League Listings: Eyes on the prize! We're shooting for the stars to get $LBONK listed on the major exchanges.
                               </p>
                               <p>
-                                Partnerships: Engage in partnerships with gaming
-                                communities, pop-culture merchandise stores, and
-                                platforms where KBY could be used for
-                                micro-transactions.
+                                Epic Partnerships: We're on the lookout for the raddest crews to join our meme party.
                               </p>
                               <p>
-                                Wallet Integration: Collaborate with popular
-                                crypto wallets to support KBY.
+                                Wallet Welcomes: We're knocking on the doors of the hottest wallets to make a cozy home for $LBONK.
                               </p>
                             </div>
                           </div>
@@ -5055,9 +5049,7 @@
                             </div>
                             <div class="ue_timeline_item_text">
                               <p>
-                                littlebonk Coin Shop: Launch an official merchandise
-                                shop where fans can purchase littlebonk-related
-                                merchandise using KBY.
+                                LBONK Swag Shop: Get ready to snag some sweet Little Bonk merch with your $LBONK.
                               </p>
                               <p>
                                 Gaming Collaborations: Engage with indie game
@@ -5065,12 +5057,10 @@
                                 currency or reward mechanism.
                               </p>
                               <p>
-                                Community Engagement: Host regular community
-                                events, competitions, and token giveaways.
+                                Gaming Shenanigans: We're teaming up with indie devs to sprinkle some $LBONK magic into their games.
                               </p>
                               <p>
-                                Develop Staking: Introduce staking mechanisms
-                                for KBY holders to earn rewards.
+                                Stake Your Space: Park your $LBONK and watch it grow with our super-duper staking rewards.
                               </p>
                             </div>
                           </div>
@@ -5113,19 +5103,13 @@
                             </div>
                             <div class="ue_timeline_item_text">
                               <p>
-                                Mobile Application: Launch a littlebonk Coin mobile
-                                app for easier tracking, staking, and trading of
-                                KBY.
+                                Community Carnivals: The fun never stops with contests, games, and freebies galore.
                               </p>
                               <p>
-                                Expand Team: Bring onboard specialists for
-                                marketing, partnerships, and technology to
-                                bolster the project's reach and efficiency.
+                                App-tastic Times: We're launching a nifty Little Bonk app to keep your $LBONK happy on the go.
                               </p>
                               <p>
-                                Tech Enhancement: Improve the scalability and
-                                security of the littlebonk Coin ecosystem based on
-                                community feedback and evolving market needs.
+                                Techie Tune-Ups: We're all ears for your ideas to make Little Bonk shinier and better.
                               </p>
                             </div>
                           </div>
