--- a/stake/index.html
+++ b/stake/index.html
@@ -14,7 +14,7 @@
     <title>LBONK's Staking</title>
 
     <!-- Favicon  -->
-    <link rel="icon" href="assets/img/faviconblack.png">
+    <link rel="icon" href="assets/images/lbonk-fav-icon.png">
 
     <!-- ***** All CSS Files ***** -->
 
